# mas_gargantua_v2

./: .gitignore  AGENTS.md  CHECK_PLAN.md  CLAUDE.md  DESIGN_PLAN.md  REVIEW_REPORT.md  idea_summary.md  opencode-ohmyopencode-technical-research.md  pyproject.toml  requirements.txt
examples/: compression_demo.py  context_demo.py  data_pipeline_demo.py  game_demo.py  web_app_demo.py
mas/: __init__.py
mas/agents/: pool.py
mas/agents/implementations/: __init__.py  backend.py  code_generation.py  code_review.py  data_analysis.py  frontend.py  game_dev.py  planning.py
mas/context/: __init__.py  compression.py  manager.py  scorer.py  store.py  types.py  window.py
mas/core/: schemas.py  task.py  workflow.py
mas/execution/: engine.py  runner.py  scheduler.py
mas/hooks/: manager.py  types.py
mas/hooks/builtin/: __init__.py  audit_log.py  input_validation.py  permission_check.py
mas/llm/: client.py
mas/logging/: __init__.py  events.py  tracker.py
mas/permissions/: config.py  manager.py  validators.py
mas/tools/: mcp_client.py  registry.py
mas/tools/builtin/: __init__.py  code_exec.py  file_ops.py  web_fetch.py
mas/utils/: config.py  logger.py
mas/workflow/: decomposer.py  factory.py
mas/workflow/templates/: __init__.py  data_pipeline.py  game.py  library.py  web_app.py
tests/: test_agent.py  test_basic.py  test_context.py  test_data_structure.py  test_engine.py  test_hooks.py  test_import.py  test_llm.py  test_tools.py  test_workflow.py
